2010-03-31  Juri Linkov  <juri@jurta.org>

	* simple.el (keyboard-escape-quit): Raise deselecting the active
	region higher than exiting the minibuffer.
	http://lists.gnu.org/archive/html/emacs-devel/2010-03/msg00904.html

2010-03-31  Juri Linkov  <juri@jurta.org>

	* image.el (image-animated-p): Use `image-metadata' instead of
	`image-extension-data'.  Get GIF extenstion data from metadata
	property `extension-data'.

2010-03-31  Stefan Monnier  <monnier@iro.umontreal.ca>

	* simple.el (append-to-buffer): Simplify.

2010-03-31  Tomas Abrahamsson  <tab@lysator.liu.se>

	* textmodes/artist.el (artist-mode): Fix typo in docstring.
	Reported by Alex Schröder <kensanata@gmail.com>.  (Bug#5807)

2010-03-31  Kenichi Handa  <handa@m17n.org>

	* language/sinhala.el (composition-function-table): Fix regexp for
	the new Unicode specification.

	* language/indian.el (devanagari-composable-pattern)
	(tamil-composable-pattern, kannada-composable-pattern)
	(malayalam-composable-pattern): Adjust for the new Unicode
	specification.
	(bengali-composable-pattern, gurmukhi-composable-pattern)
	(gujarati-composable-pattern, oriya-composable-pattern)
	(telugu-composable-pattern): New variables to cope with the new
	Unicode specification.  Use them in composition-function-table.

2010-03-31  Stefan Monnier  <monnier@iro.umontreal.ca>

	Make tmm-menubar work for the Buffers menu again.
	* tmm.el (tmm-prompt): Also handle keymap entries in the form of
	vectors rather than cons cells, as used in menu-bar-update-buffers.

2010-03-31  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/js.el (js-auto-indent-flag, js-mode-map)
	(js-insert-and-indent): Revert 2009-08-15 change, restoring
	electric punctuation for "{}();,:" (Bug#5586).

	* mail/sendmail.el (mail-default-directory): Doc fix.

2010-03-31  Chong Yidong  <cyd@stupidchicken.com>

	* mail/sendmail.el (mail-default-directory): Doc fix.

2010-03-31  Eli Zaretskii  <eliz@gnu.org>

	* subr.el (version-regexp-alist, version-to-list)