@@ -1,5 +1,11 @@
 2010-03-31  Juri Linkov  <juri@jurta.org>
 
+	* simple.el (next-line, previous-line): Re-throw a signal
+	with `signal' instead of using `ding'.
+	http://lists.gnu.org/archive/html/emacs-devel/2010-03/msg01432.html
+
+2010-03-31  Juri Linkov  <juri@jurta.org>
+
 	* simple.el (keyboard-escape-quit): Raise deselecting the active
 	region higher than exiting the minibuffer.
 	http://lists.gnu.org/archive/html/emacs-devel/2010-03/msg00904.html
